[tool.poetry]
name = "gridvis"
version = "0.1.0"
description = ""
authors = ["JCatton <106551147+JCatton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
vispy = "^0.12.1"
pyqt6 = "^6.4.2"
pyqtgraph = "^0.13.1"
pyopengl = "^3.1.6"
opensimplex = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
